# Cron-jobs

./: .gitignore  Cargo.toml  package-lock.json  package.json  start.sh  tailwind.config.js
.cursor/commands/: project-rules.md
.cursor/plans/: supabase-auth-landing-page-04ae63ff.plan.md  turso-libsql-multi-tenant-implementation-54563555.plan.md
.cursor/rules/: project-rules.md
build-docs/: ENV-SETUP.md  turso-database.md
src/: app.rs  config.rs  context.rs  lib.rs  main.rs
src/client/: mod.rs  supabase.rs
src/server/: mod.rs
src/server/Turso/: auth.rs  client.rs  config.rs  mod.rs  schema.rs
src/server/actions/: README.md  cron_jobs.rs  helpers.rs  mod.rs  user.rs
src/server/models/: cron_job.rs  mod.rs
src/server/routes/: README.md
src/server/service/: cron_service.rs  mod.rs  user_service.rs
src/ui/auth/: landing.rs  login.rs  mod.rs  protected.rs  signup.rs
