[package]
name = "cron-jobs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.2" }
leptos_meta = { version = "0.8.2" }
leptos_router = { version = "0.8.2" }
leptos-shadcn-ui-wasm = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5"

# WASM-only dependencies - ALL marked as optional
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "=0.2.105", optional = true }
web-sys = { version = "0.3", features = ["Window", "Storage", "Request", "RequestInit", "RequestMode", "Response", "Headers"], optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
uuid = { version = "1", features = ["js"], optional = true }

# SSR-only dependencies (excluded from WASM builds)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", optional = true, features = ["macros"] }
leptos_actix = { version = "0.8.2", optional = true }
http = { version = "1.3.1", optional = true }
dotenv = { version = "0.15", optional = true }

[features]
csr = ["leptos/csr"]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:web-sys",
    "dep:js-sys",
    "dep:wasm-bindgen-futures",
    "dep:serde-wasm-bindgen",
    "dep:uuid",
]
ssr = [
    "dep:actix-files",
    "dep:actix-web",
    "dep:leptos_actix",
    "dep:dotenv",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "front"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/output.css"
assets-dir = "assets"
site-addr = "127.0.0.1:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"